# CryptoTrader

./: AltCoin.hpp  Altcoin.cpp  Altcoin.hpp  AnalizatorPiata.cpp  AnalizatorPiata.hpp  BlueChipCoin.cpp  BlueChipCoin.hpp  CMakeLists.txt  Exceptions.hpp  FiatCoin.cpp  FiatCoin.hpp  MemeCoin.cpp  MemeCoin.hpp  Moneda.cpp  Moneda.hpp  Piata.cpp  Piata.hpp  Portofel.cpp  Portofel.hpp  README.md  StableCoin.cpp  StableCoin.hpp  Tranzactie.cpp  Tranzactie.hpp  Utilizator.cpp  Utilizator.hpp  logs.txt  main.cpp  tastatura.txt
include/Exceptii/: Exceptii.hpp
include/Monede/: Altcoin.hpp  Moneda.hpp  MonedaDeBaza.hpp  MonedaFiat.hpp  MonedaMeme.hpp  MonedaStabila.hpp
include/Piata/: AnalizatorPiata.hpp  Piata.hpp
include/Sabloane/: ContainerSablon.hpp  FabricaSablon.hpp  SingletonSablon.hpp
include/Tranzactii/: Tranzactie.hpp
include/Utilitare/: CititorFisier.hpp  InterfataTerminal.hpp  ManagerFisiere.hpp
include/Utilizator/: ManagerUtilizatori.hpp  Portofel.hpp  Utilizator.hpp
src/Monede/: Altcoin.cpp  Moneda.cpp  MonedaDeBaza.cpp  MonedaFiat.cpp  MonedaMeme.cpp  MonedaStabila.cpp
src/Piata/: AnalizatorPiata.cpp  Piata.cpp
src/Tranzactii/: Tranzactie.cpp
src/Utilitare/: CititorFisier.cpp  InterfataTerminal.cpp  ManagerFisiere.cpp
src/Utilizator/: ManagerUtilizatori.cpp  Portofel.cpp  Utilizator.cpp
tests/: TestRunner.cpp  TestRunner.hpp
